# dorfai

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  install.sh
include/: board.h  game.h  move.h  random.h  tile.h  utf_art.h
resources/tiles/: test-lands.txt  test-lands.yaml  tiles.yaml
src/: board.cpp  game.cpp  main.cpp  random.cpp  tile.cpp  utf_art.cpp
tests/: test_board.cpp  test_game.cpp  test_tile.cpp
